<resources>
    <string name="app_name">MutualPatientSupport</string>

    <!-- Strings related to login -->
    <string name="button_caregiver">護理員</string>
    <string name="button_patient">長者</string>
    <string name="button_visitor">訪客</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">電子郵件</string>
    <string name="prompt_password">密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to homepage_caregiver -->
    <string name="patient_info">病人信息</string>
    <string name="news">新聞活動</string>
    <string name="share_location">共享位置</string>
    <string name="reminder">提醒事項</string>
    <string name="lost">病人走失</string>
    <string name="logout">退出登錄</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_patient_information">patient_informationActivity</string>
    <string name="title_activity_news_detail">news_detailActivity</string>
    <string name="title_activity_reminder">reminderActivity</string>
    <string name="title_activity_reminder_detail_pa">reminder_detail_paActivity</string>
    <string name="title_activity_reminder_detail_cg">reminder_detail_cgActivity</string>
    <string name="title_activity_go_home">Map</string>
    <string name="title_activity_contact_">緊急聯絡</string>
    <string name="title_activity_name_card">病人信息</string>

</resources>
