<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_homepage_cg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hkust.mutualpatientsupport.Homepage_cgActivity">

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_logout"
        android:paddingRight="90dp"
        android:paddingLeft="90dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/button_lostmode"
        android:layout_alignStart="@+id/button_lostmode" />

    <Button
        android:text="@string/lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_lostmode"
        android:paddingRight="90dp"
        android:paddingLeft="90dp"
        android:background="@android:color/holo_red_dark"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/button_location"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_news"
        android:background="@android:color/holo_orange_dark"
        android:padding="40dp"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/patient_info"
        android:id="@+id/button_info"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        style="@android:style/Widget.Button"
        android:background="@android:color/holo_orange_dark"
        android:padding="40dp"
        android:layout_alignBaseline="@+id/button_news"
        android:layout_alignBottom="@+id/button_news"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_reminder"
        android:background="@android:color/holo_orange_dark"
        android:padding="40dp"
        android:freezesText="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/share_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_location"
        android:background="@android:color/holo_orange_dark"
        android:padding="40dp"
        android:freezesText="false"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
