<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hkust.mutualpatientsupport.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewMain"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/icon"
        />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_caregiver"
        android:id="@+id/button_direct_cg"
        android:fontFamily="cursive"
        android:includeFontPadding="true"
        android:background="@color/buttonColor"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:layout_below="@+id/imageViewMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_patient"
        android:id="@+id/button_direct_pt"
        android:layout_alignTop="@+id/button_direct_cg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="cursive"
        android:includeFontPadding="true"
        android:background="@color/buttonColor"
        android:textColor="#ffffff"
        android:textSize="30dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_visitor"
        android:id="@+id/button_direct_vi"
        android:layout_alignTop="@+id/button_direct_pt"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        android:includeFontPadding="true"
        android:background="@color/buttonColor"
        android:textColor="#ffffff"
        android:textSize="30dp"
        />


</RelativeLayout>
